SLLS-271 fix tests